# project-templates

./: flake.nix
.github/workflows/: ci.yml
python/: flake.nix  overlay.nix
python-uv2nix/: .gitignore  flake.nix  pyproject.toml
python-uv2nix/python/: .gitignore  flake.nix  package.nix
python-uv2nix/python/xor_neural_net/apps/: __init__.py
python-uv2nix/xor_neural_net/: __init__.py
python/xor_neural_net/: model.py
python/xor_neural_net/apps/: predict.py  train.py
rust/: flake.nix  overlay.nix  package.nix
rust-crane/: Cargo.toml  README.md  flake.nix
rust-crane/hash-file/src/: main.rs
rust-crane/hash-folder/src/: main.rs
rust-crane/hasher/: Cargo.toml
rust-crate2nix/: Cargo.nix  Cargo.toml  flake.nix  overlay.nix
rust-crate2nix/hash-file/: Cargo.toml
rust-crate2nix/hash-folder/: Cargo.toml
rust-crate2nix/hasher/src/: lib.rs
scripts/: check-flakes.sh
